--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ fastapi = "^0.115.12"
 uvicorn = {extras = ["standard"], version = "^0.34.2"}
 textblob = "^0.19.0"
 pytubefix = "^8.13.1"
-whisper = "^1.1.10"
+openai-whisper = {git = "https://github.com/openai/whisper.git"}
 
 [tool.poetry.group.cpu]
 optional = true
