--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ uvicorn = {extras = ["standard"], version = "^0.34.2"}
 textblob = "^0.19.0"
 pytubefix = "^8.13.1"
 openai-whisper = {git = "https://github.com/openai/whisper.git"}
+pre-commit = "^4.2.0"
 
 [tool.poetry.group.cpu]
 optional = true
