--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,15 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+-   repo: https://github.com/pycqa/flake8
+    rev: 5.0.4
+    hooks:
+    -   id: flake8
+-   repo: https://github.com/psf/black
+    rev: a3e8247a41089175827a69e5413278ffdc28aff2
+    hooks:
+    -   id: black
+-   repo: https://github.com/PyCQA/isort
+    rev: 7b69d092ae4885dcc45648538ae780a6326bcd1e
+    hooks:
+    -   id: isort
