--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ textblob = "^0.19.0"
 pytubefix = "^8.13.1"
 openai-whisper = {git = "https://github.com/openai/whisper.git"}
 pre-commit = "^4.2.0"
+black = "^25.1.0"
+isort = "^6.0.1"
 
 [tool.poetry.group.cpu]
 optional = true
@@ -64,6 +66,11 @@ optional = true
 torch = {version = "*", source = "pytorch-cuda", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
 torchvision = {version = "*", source = "pytorch-cuda", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
 torchaudio = {version = "*", source = "pytorch-cuda", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
+
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "5.0.4"
+importlib-metadata = "8.7.0"
 
 [[tool.poetry.source]]
 name = "pytorch-cpu"
