--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # macOS system files
 .DS_Store
 
@@ -20,4 +19,7 @@ poetry.lock
 
 # Pytest cache
 .pytest_cache/
+
+# Test reports
+test-reports/
 
