--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,6 +15,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
- 
+          cache: 'pip'
+
+      - name: Install pre-commit
+        run: pip install pre-commit
+
       - name: Run pre-commit hooks
         run: pre-commit run --all-files
