--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,3 +1,5 @@
+name: Lint Code
+ 
 # Trigger on pull requests to main
 on:
   pull_request:
@@ -15,10 +17,19 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'pip'
-
-      - name: Install pre-commit
-        run: pip install pre-commit
-
+ 
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 2.1.3
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+ 
+      - name: Install dependencies
+        run: |
+          poetry install --no-interaction
+          poetry add --group dev pre-commit
+ 
       - name: Run pre-commit hooks
-        run: pre-commit run --all-files
+        run: |
+          poetry run pre-commit run --all-files
