--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -34,4 +34,4 @@ jobs:
  
       - name: Run pre-commit hooks
         run: |
-          poetry run pre-commit run --all-files
+          poetry run pre-commit run --all-files --color=always --show-diff-on-failure
