--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,27 +48,20 @@ uvicorn = {extras = ["standard"], version = "^0.34.2"}
 textblob = "^0.19.0"
 pytubefix = "^8.13.1"
 openai-whisper = {git = "https://github.com/openai/whisper.git"}
-<<<<<<< Updated upstream
-=======
-<<<<<<< Updated upstream
-=======
->>>>>>> Stashed changes
 pre-commit = "^4.2.0"
 black = "^25.1.0"
 isort = "^6.0.1"
 pytest = "^8.3.5"
-<<<<<<< Updated upstream
-=======
 protobuf = "^6.31.0"
 sentencepiece = "^0.2.0"
->>>>>>> Stashed changes
->>>>>>> Stashed changes
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "5.0.4"
 importlib-metadata = "8.7.0"
 
-
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.flake8]
+max-line-length = 88
