--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,8 @@ isort = "^6.0.1"
 pytest = "^8.3.5"
 protobuf = "^6.31.0"
 sentencepiece = "^0.2.0"
+tabulate = "^0.9.0"
+termcolor = "^3.1.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "5.0.4"
