--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+        args: ['--maxkb=1000']
+        # exclude: ^assets/
 -   repo: https://github.com/pycqa/flake8
     rev: 5.0.4
     hooks:
