--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.9.0",
         "chart.js": "^4.4.9",
+        "chartjs-adapter-date-fns": "^3.0.0",
         "chartjs-plugin-annotation": "^2.2.1",
+        "date-fns": "^4.1.0",
         "framer-motion": "^10.18.0",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.3.0",
