--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,10 +58,13 @@ termcolor = "^3.1.0"
 sphinx = "^8.2.3"
 sphinx-rtd-theme = "^3.0.2"
 sphinx-autobuild = "^2024.10.3"
+azure-ai-ml = "^1.27.1"
+azureml-core = "^1.60.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "5.0.4"
-importlib-metadata = "8.7.0"
+importlib-metadata = "^8.2.0"
 pre-commit = "^4.2.0"
 
 [build-system]
