--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,18 @@ services:
     volumes:
       - ./src:/app/src # Mount src for hot-reloading if uvicorn --reload is used
       - ./models:/models
-    #env_file:
-    #  - .env # Loads environment variables from .env file (e.g., ASSEMBLYAI_API_KEY)
+    env_file:
+     - .env # Loads environment variables from .env file (e.g., ASSEMBLYAI_API_KEY)
     container_name: emotion_backend
     networks:
       - emotion_network
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 'all' # Or '1'
+              capabilities: [gpu]
 
   # Frontend  
   frontend:
