--- a/.env.template
+++ b/.env.template
@@ -1,17 +1,17 @@
   
 # Assembly API key
-ASSEMBLYAI_API_KEY="<INSERT YOUR VALU HERE>"
+ASSEMBLYAI_API_KEY="<INSERT YOUR VALUE HERE>"
 
 # Azure ML Workspace Configuration
-AZURE_SUBSCRIPTION_ID="<INSERT YOUR VALU HERE>"
-AZURE_RESOURCE_GROUP="<INSERT YOUR VALU HERE>"
-AZURE_WORKSPACE_NAME="<INSERT YOUR VALU HERE>"
+AZURE_SUBSCRIPTION_ID="<INSERT YOUR VALUE HERE>"
+AZURE_RESOURCE_GROUP="<INSERT YOUR VALUE HERE>"
+AZURE_WORKSPACE_NAME="<INSERT YOUR VALUE HERE>"
 
 # Optional Configuration
-AZURE_LOCATION="<INSERT YOUR VALU HERE>"westeurope
+AZURE_LOCATION="westeurope"
 
 # Service Principal Configuration (Optional - for automated authentication)
 # If not provided, interactive authentication will be used
-AZURE_TENANT_ID="<INSERT YOUR VALU HERE>"
+AZURE_TENANT_ID="<INSERT YOUR VALUE HERE>"
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
