--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ sphinx-autobuild = "^2024.10.3"
 azure-ai-ml = "^1.27.1"
 azureml-core = "^1.60.0"
 python-dotenv = "^1.0.0"
+azure-identity = "^1.23.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "5.0.4"
