--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ python-dotenv = "^1.0.0"
 azure-ai-ml = "^1.27.1"
 mlflow = "^2.22.0"
 azure-identity = "^1.23.0"
+ffmpeg-python = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "5.0.4"
