--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -1,46 +1,43 @@
-name: emotion-clf-pipeline
+name: emotion-clf-pipeline-env
 channels:
-  - defaults
-  - pytorch
   - conda-forge
+  - defaults
 dependencies:
-  - python>=3.11,<3.12
-  - pytorch
-  - torchvision
-  - torchaudio
+  - python=3.11
   - transformers>=4.51.3
   - pandas>=2.2.3
   - scikit-learn>=1.6.1
   - tqdm>=4.67.1
   - nltk>=3.9.1
   - seaborn>=0.13.2
-  - assemblyai>=0.40.2
   - openpyxl>=3.1.5
   - sentence-transformers>=4.1.0
   - jupyter>=1.1.1
   - ipykernel>=6.29.5
   - fastapi>=0.115.12
-  - uvicorn>=0.34.2
-  - textblob>=0.19.0
-  - pytubefix>=8.13.1
   - black>=25.1.0
   - isort>=6.0.1
   - pytest>=8.3.5
-  - protobuf>=6.31.0
+  - protobuf
   - sentencepiece>=0.2.0
   - tabulate>=0.9.0
   - termcolor>=3.1.0
   - sphinx>=8.2.3
   - sphinx-rtd-theme>=3.0.2
   - sphinx-autobuild>=2024.10.3
-  - azure-ai-ml>=1.27.1
-  - azureml-core>=1.60.0
   - python-dotenv>=1.0.0
+  - mlflow>=2.22.0  
   - azure-identity>=1.23.0
   - pip
   - pip:
-    - openai-whisper @ git+https://github.com/openai/whisper.git
-  # Dev dependencies
-  - flake8>=5.0.4 # From tool.poetry.group.dev.dependencies
-  - importlib-metadata>=8.2.0 # From tool.poetry.group.dev.dependencies
-  - pre-commit>=4.2.0 # From tool.poetry.group.dev.dependencies
+      - ffmpeg-python==0.2.0
+      - torch
+      - torchvision
+      - torchaudio
+      - azure-ai-ml>=1.27.1
+      - azureml-core
+      - assemblyai>=0.40.2
+      - pytubefix>=8.13.1
+      - git+https://github.com/openai/whisper.git
+      - uvicorn[standard]>=0.34.2
+      - textblob>=0.19.0
