--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,11 @@
         "date-fns": "^4.1.0",
         "framer-motion": "^10.18.0",
         "react": "^18.2.0",
-        "react-chartjs-2": "^5.3.0",
-        "react-dom": "^18.2.0",
+        "react-chartjs-2": "^5.3.0",        "react-dom": "^18.2.0",
         "react-player": "^2.16.0",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "xlsx": "^0.18.5"
     },
     "overrides": {
         "nth-check": "^2.1.1",
