--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,9 +3,11 @@ name: Lint Code
 # Trigger on pull requests to main
 on:
   push:
-    branches: [ main ]
+    # branches: [ main ]
+    branches: [ '*' ]
   pull_request:
-    branches: [ main ]
+    # branches: [ main ]
+    branches: [ '*' ]
 
 jobs:
   lint:
