--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,9 +3,11 @@ name: Test Suite
 # Trigger on push and pull requests
 on:
   push:
-    branches: [ main ]
+    # branches: [ main ]
+    branches: [ '*' ]
   pull_request:
-    branches: [ main ]
+    # branches: [ main ]
+    branches: [ '*' ]
 
 jobs:
   build-and-test:
