--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,24 +3,25 @@ name: Test Suite
 # Trigger on push and pull requests
 on:
   push:
-    # branches: [ main ]
     branches: [ '*' ]
   pull_request:
-    # branches: [ main ]
     branches: [ '*' ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: ['3.11']
+    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -29,18 +30,37 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
 
-      - name: Install dependencies
-        run: |
-          poetry install --no-interaction
-          poetry add --group dev pytest pytest-cov
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
-      - name: Run pytest
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-ansi
+
+      - name: Run pytest with coverage
         run: |
           mkdir -p test-reports
-          poetry run pytest --junitxml=test-reports/results.xml
+          poetry run pytest \
+            --junitxml=test-reports/results.xml \
+            --cov=src/emotion_clf_pipeline \
+            --cov-report=xml:test-reports/coverage.xml \
+            --cov-report=html:test-reports/htmlcov \
+            --cov-report=term-missing
 
       - name: Upload test results
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: test-reports/results.xml
+          name: test-results-${{ matrix.python-version }}
+          path: test-reports/
+
+      - name: Upload coverage to Codecov
+        if: matrix.python-version == '3.11'
+        uses: codecov/codecov-action@v4
+        with:
+          file: test-reports/coverage.xml
+          fail_ci_if_error: false
