--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ mlflow = "^2.22.0"
 azure-identity = "^1.23.0"
 azure-storage-blob = "^12.25.1"
 ffmpeg-python = "^0.2.0"
+pytest-cov = "^6.2.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "5.0.4"
