--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -4,14 +4,22 @@ on:
   push:
     branches:
       - main  # Or your default branch, e.g., master
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  build-and-deploy-docs:
+  build-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -23,21 +31,35 @@ jobs:
           python-version: '3.11'  # Choose a Python version compatible with your project and Sphinx
 
       - name: Install documentation dependencies
-        run: pip install -r docs/requirements-docs.txt
-
-      # Optional: Install project dependencies if your documentation build imports your project code
-      # Create a requirements.txt in your project root or adjust the path
-      # - name: Install project dependencies
-      #   run: pip install -r requirements.txt
+        run: |
+          pip install --upgrade pip
+          pip install -r docs/requirements-docs.txt
 
       - name: Build Sphinx documentation
-        run: sphinx-build -b html docs docs/_build/html # Source: docs/, Output: docs/_build/html/
+        run: |
+          # Create _static directory if it doesn't exist
+          mkdir -p docs/_static
+          # Build documentation with verbose output and treat warnings as errors
+          sphinx-build -b html -W --keep-going docs docs/_build/html
 
-      - name: Upload GitHub Pages artifact
+      - name: Upload documentation artifact
         uses: actions/upload-pages-artifact@v3
+        if: success()
         with:
           path: docs/_build/html/
 
+  deploy-docs:
+    # Only deploy on pushes to main branch (not on PRs)
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    needs: build-docs
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          timeout: 600000
