--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Sphinx Documentation
 on:
   push:
     branches:
-      - main  # Or your default branch, e.g., master
+      - main
   pull_request:
     branches:
       - main
@@ -28,19 +28,32 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'  # Choose a Python version compatible with your project and Sphinx
+          python-version: '3.11'
 
-      - name: Install documentation dependencies
-        run: |
-          pip install --upgrade pip
-          pip install -r docs/requirements-docs.txt
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 2.1.3
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-ansi
 
       - name: Build Sphinx documentation
         run: |
           # Create _static directory if it doesn't exist
           mkdir -p docs/_static
-          # Build documentation with verbose output and treat warnings as errors
-          sphinx-build -b html -W --keep-going docs docs/_build/html
+          # Build documentation with Poetry (removed -W flag to allow warnings)
+          poetry run sphinx-build -b html --keep-going docs docs/_build/html
 
       - name: Upload documentation artifact
         uses: actions/upload-pages-artifact@v3
@@ -56,10 +69,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          timeout: 600000
