--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,14 +25,12 @@ services:
             - driver: nvidia
               count: 'all' # Or '1'
               capabilities: [gpu]
-
   # Frontend  
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-      args:
-        REACT_APP_API_BASE_URL: http://194.171.191.226:3120
+      # Removed REACT_APP_API_BASE_URL - using dynamic API detection instead
     image: soheilmp/emotion-clf-frontend:latest
     ports:
       - "3121:80"  # Exposes frontend on host port 3121, maps to nginx container port 80
