Minor fixes on compute

--- a/.env
+++ b/.env
@@ -11,3 +11,8 @@ AZURE_TENANT_ID="0a33589b-0036-4fe8-a829-3ed0926af886"
 AZURE_CLIENT_ID="a2230f31-0fda-428d-8c5c-ec79e91a49f5"
 AZURE_CLIENT_SECRET="AWA8Q~14jhEuWoP5K4FNnRfsRc_Qcbhx8PeLRaXw"
 
+# Docker Image (Backend)
+DOCKER_IMAGE="soheilmp/emotion-clf-backend:latest"
+
+# Optional: Name for the container instance
+ACI_CONTAINER_NAME="emotion-clf-backend"
