Improvements on frontend

--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ DOCKER_IMAGE="soheilmp/emotion-clf-backend:latest"
 
 # Optional: Name for the container instance
 ACI_CONTAINER_NAME="emotion-clf-backend"
+
+# Gemini API Key
+GEMINI_API_KEY="AIzaSyAeqDhrmHdtfnwg01qkFTUB0mcMcYZgV64"
