--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -19,23 +19,19 @@ scrape_configs:
   # Backend API metrics
   - job_name: 'emotion-backend'
     static_configs:
-      - targets: ['backend:80']
+      - targets: ['backend:3120']
     metrics_path: '/metrics'
     scrape_interval: 5s
 
-  # System metrics
-  - job_name: 'node-exporter'
-    static_configs:
-      - targets: ['node-exporter:9100']
-
-  # Container metrics
+  # Container metrics for resource monitoring
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
+    scrape_interval: 10s
 
-  # Custom ML metrics exporter
-  - job_name: 'ml-metrics'
+  # Custom ML metrics from API
+  - job_name: 'emotion-ml-metrics'
     static_configs:
-      - targets: ['backend:8000']  # We'll add this endpoint
-    metrics_path: '/ml-metrics'
-    scrape_interval: 30s
+      - targets: ['backend:3120']
+    metrics_path: '/metrics'
+    scrape_interval: 10s
