Improvement on monitoring

--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ ACI_CONTAINER_NAME="emotion-clf-backend"
 
 # Gemini API Key
 GEMINI_API_KEY="AIzaSyAeqDhrmHdtfnwg01qkFTUB0mcMcYZgV64"
+REACT_APP_GEMINI_API_KEY="AIzaSyAeqDhrmHdtfnwg01qkFTUB0mcMcYZgV64"
 
 # Azure ML Endpoint Configuration
 AZURE_ENDPOINT_URL="http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score"
