--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,9 @@ services:
     networks:
       - emotion_network
     restart: unless-stopped
+    environment:
+      # Gemini API Configuration (optional)
+      - REACT_APP_GEMINI_API_KEY=${REACT_APP_GEMINI_API_KEY:-}
     deploy:
       resources:
         limits:
