--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,6 @@ PORT=3121
 
 # Gemini API Key for Video Summary Generation
 REACT_APP_GEMINI_API_KEY=AIzaSyAeqDhrmHdtfnwg01qkFTUB0mcMcYZgV64
+
+# Gemini API Key
+GEMINI_API_KEY="AIzaSyAeqDhrmHdtfnwg01qkFTUB0mcMcYZgV64"
